--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
 </head>
 
 <body>
+    <div id="scoare">0</div>
 
-    <div class = "grid">
-        <div class="block"></div>
-    </div>
+    <div class = "grid"></div>
 
     <script src="index.js"></script>
     
